--- a/Assets/style.css
+++ b/Assets/style.css
@@ -39,6 +39,28 @@ body {
   justify-content: center;
   align-items: center;
 }
+.clipboardwrap {
+  display: flex;
+  justify-items: center;
+  align-items: center;
+  row-gap: 1rem;
+  column-gap: 1rem;
+  justify-content: center;
+  align-items: center;
+}
+.copybutton {
+  background-color: hsl(360, 91%, 36%);
+  font-weight: bold;
+  width: 50px;
+  height: 50px;
+}
+.copybutton:hover {
+  background-color: green;
+  color: white;
+  font-weight: bold;
+  width: 50px;
+  height: 50px;
+}
 label {
   font-weight: bold;
 }
@@ -122,7 +144,7 @@ h1 {
   text-align: center;
   margin-top: 10px;
   margin-bottom: 10px;
-  border: 2px dashed #c0c7cf;
+  border: 2px solid #c0c7cf;
   border-radius: 6px;
   resize: none;
   overflow: hidden;
@@ -282,7 +304,7 @@ footer {
     text-align: center;
     margin-top: 10px;
     margin-bottom: 10px;
-    border: 2px dashed #c0c7cf;
+    border: 2px solid #c0c7cf;
     border-radius: 6px;
     resize: none;
     overflow: hidden;
