--- a/Assets/style.css
+++ b/Assets/style.css
@@ -5,55 +5,48 @@
 }
 /* html document padding and margin setting it to a default of 0 */
 html {
-  margin: 0;
-  padding: 0;
-  height: 100%;
+  margin: 0px;
+  padding: 0px;
 }
 
 /* determins the body style */
 body {
   font-family: sans-serif;
-  background-color: #f9fbfd;
-  margin: 0;
+  background-color: whitesmoke;
+  margin: 3px;
   color: black;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-}
-
-.wrapper {
-  padding: 3rem;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
 }
 /* form class determins the uppercase, numbers and symbols layout */
 .form {
   display: grid;
   grid-template-columns: auto auto;
   row-gap: 1rem;
-  column-gap: 3rem;
+  column-gap: 5rem;
   justify-content: center;
   align-items: center;
 }
+/* this determins the class of the password section and clipboard */
 .clipboardwrap {
   display: flex;
   justify-items: center;
+  justify-content: center;
   align-items: center;
   row-gap: 1rem;
   column-gap: 1rem;
-  justify-content: center;
-  align-items: center;
 }
+/* clipboard image */
 .copybutton {
   background-color: hsl(360, 91%, 36%);
   font-weight: bold;
   width: 50px;
   height: 50px;
+  cursor: pointer;
 }
+/* this changes the copy password button to green when hovered */
 .copybutton:hover {
   background-color: green;
   color: white;
@@ -75,25 +68,24 @@ label {
 /* heading styles */
 header {
   text-align: center;
-  padding: 20px;
-  padding-top: 0px;
-  color: hsl(206, 17%, 28%);
+  padding: 30px 40px;
+  color: black;
 }
 h1 {
   text-align: center;
-  margin: auto;
+  margin: 0;
 }
-/* card class determining the white surrounding box */
+/* card class determining the white surrounding box (card) */
 .card {
   background-color: hsl(0, 0%, 100%);
   border-radius: 5px;
   border-width: 1px;
   box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 8px 0px;
-  color: hsl(206, 17%, 28%);
+  color: black;
   font-size: 18px;
-  margin: 0 auto;
+  margin: 50px auto;
   max-width: 800px;
-  padding: 30px 40px;
+  padding: 20px 40px;
 }
 
 .card-header::after {
@@ -136,19 +128,17 @@ h1 {
   border: none;
   display: block;
   width: 100%;
-  padding-top: 15px;
-  padding-left: 15px;
-  padding-right: 15px;
-  padding-bottom: 85px;
+  padding: 50px 50px 50px;
   font-size: 1.2rem;
   text-align: center;
   margin-top: 10px;
   margin-bottom: 10px;
-  border: 2px solid #c0c7cf;
+  border: 2px solid black;
   border-radius: 6px;
   resize: none;
   overflow: hidden;
   word-break: break-all;
+  color: black;
 }
 /* button class */
 .btn {
@@ -156,7 +146,7 @@ h1 {
   background-color: hsl(360, 91%, 36%);
   color: white;
   margin: 16px 16px 16px 20px;
-  padding: 14px 34px;
+  padding: 0.5rem 1rem;
   font-size: 22px;
   font-weight: bold;
   cursor: pointer;
@@ -172,8 +162,7 @@ button[disabled] {
 }
 
 footer {
-  padding: 3em;
-  height: 100vh;
+  padding: 0;
   margin-top: auto;
   line-height: 100px;
   color: black;
@@ -184,149 +173,17 @@ footer {
     font-size: 1rem;
     margin: 16px 0px 0px 0px;
     padding: 10px 15px;
+    align-items: center;
   }
+
   .password-display {
     font-size: 1rem;
   }
+}
 
-  @media (max-width: 500px) {
-    .btn {
-      font-size: 0.8rem;
-    }
-  }
-  *,
-  *::before,
-  *::after {
-    box-sizing: border-box;
-  }
-
-  html,
-  body,
-  .wrapper {
-    height: 100%;
-    margin: 0;
-    padding: 0;
-  }
-
-  body {
-    font-family: sans-serif;
-    background-color: #f9fbfd;
-  }
-
-  .wrapper {
-    padding-top: 30px;
-    padding-left: 20px;
-    padding-right: 20px;
-  }
-
-  header {
-    text-align: center;
-    padding: 20px;
-    padding-top: 0px;
-    color: hsl(206, 17%, 28%);
-  }
-
-  .card {
-    background-color: hsl(0, 0%, 100%);
-    border-radius: 5px;
-    border-width: 1px;
-    box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 8px 0px;
-    color: hsl(206, 17%, 28%);
-    font-size: 18px;
-    margin: 0 auto;
-    max-width: 800px;
-    padding: 30px 40px;
-  }
-
-  .card-header::after {
-    content: " ";
-    display: block;
-    width: 100%;
-    background: #e7e9eb;
-    height: 2px;
-  }
-
-  .card-body {
-    min-height: 100px;
-  }
-
-  .card-footer {
-    text-align: center;
-  }
-
-  .card-footer::before {
-    content: " ";
-    display: block;
-    width: 100%;
-    background: #e7e9eb;
-    height: 2px;
-  }
-
-  .card-footer::after {
-    content: " ";
-    display: block;
-    clear: both;
-  }
-
+@media (max-width: 500px) {
   .btn {
-    grid-column: span 2;
-    background-color: hsl(360, 91%, 36%);
-    color: white;
-    margin: 16px 16px 16px 20px;
-    padding: 14px 34px;
-    font-size: 22px;
-    font-weight: bold;
-    cursor: pointer;
-    border-radius: 25px;
-  }
-
-  button[disabled] {
-    cursor: default;
-    background: #c0c7cf;
-  }
-
-  .float-right {
-    float: right;
-  }
-
-  .password-display {
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
-    border: none;
-    display: block;
-    width: 100%;
-    padding-top: 15px;
-    padding-left: 15px;
-    padding-right: 15px;
-    padding-bottom: 85px;
-    font-size: 1.2rem;
-    text-align: center;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    border: 2px solid #c0c7cf;
-    border-radius: 6px;
-    resize: none;
-    overflow: hidden;
-  }
-  /* determins element changes at set screen size */
-  @media (max-width: 690px) {
-    .btn {
-      font-size: 1rem;
-      margin: 16px 0px 0px 0px;
-      padding: 10px 15px;
-      align-items: center;
-    }
-
-    .password-display {
-      font-size: 1rem;
-    }
-  }
-
-  @media (max-width: 500px) {
-    .btn {
-      font-size: 0.8rem;
-      align-items: center;
-    }
+    font-size: 0.9rem;
+    align-items: center;
   }
 }
