--- a/Assets/style.css
+++ b/Assets/style.css
@@ -131,8 +131,7 @@ h1 {
   padding: 50px 50px 50px;
   font-size: 1.2rem;
   text-align: center;
-  margin-top: 10px;
-  margin-bottom: 10px;
+  margin: 10 20;
   border: 2px solid black;
   border-radius: 6px;
   resize: none;
